---
source: crates/sith_python_parser/src/parser/tests/suite.rs
expression: parse_suite(source)
---
(
    [
        Assign(
            AssignStmt {
                range: 0..11,
                targets: [
                    Tuple(
                        TupleExpr {
                            range: 0..4,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 0..1,
                                        id: "a",
                                        ctx: Store,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 3..4,
                                        id: "b",
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                        },
                    ),
                ],
                value: Tuple(
                    TupleExpr {
                        range: 7..11,
                        elts: [
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 7..8,
                                    value: Int(
                                        4,
                                    ),
                                },
                            ),
                            NumberLiteral(
                                NumberLiteralExpr {
                                    range: 10..11,
                                    value: Int(
                                        5,
                                    ),
                                },
                            ),
                        ],
                        ctx: Load,
                    },
                ),
            },
        ),
    ],
    [],
)
